------------------------------------------------------------------------
r2199 | gaser | 2023-05-04 13:52:45

Changed paths:
 M CHANGES.txt
 M Makefile
AM cat_vol_tfce.m
A  tfceMex_pthread.c
AM tfceMex_pthread.m
A  tfceMex_pthread.mexa64
A  tfceMex_pthread.mexmaca64
A  tfceMex_pthread.mexmaci64
A  tfceMex_pthread.mexw64

Added:   Added new function ca_vol_tfce.m that allows to apply threshold-free 
         cluster enhancement (TFCE) and scale the image to have the same 
         intensity distribution as the input.
Added:   Added tfceMex_pthread.* from TFCE toolbox.
------------------------------------------------------------------------
r2196 | gaser | 2023-05-02 23:37:42

Changed paths:
 M CHANGES.txt
 M cat_main_reportfig.m
 M cat_run_job1639.m
 M doc/index.html

Changed: Updated FAQ in CAt12 manual.
Fixed:   Corrected bug in cat_main_reportfig.m where the order of the temporary
         surfaces was wrong.
Fixed:   Corrected bug in cat_main_reportfig.m where the surface overlay was not 
         working because the temporary surfaces were deleted too early.
------------------------------------------------------------------------
r2195 | rdahnke | 2023-05-02 14:55:45

Changed paths:
 M CHANGES.txt

Fixed:    Added missing files of previous update.
------------------------------------------------------------------------
r2194 | rdahnke | 2023-05-02 13:24:46

Changed paths:
 M CHANGES.txt
 M cat_conf_tools.m
 M cat_io_xml2csv.m
 M cat_stat_marks.m

Changed:    Extended quality evaluation batch in cat_conf_tools to support 
            different qa-versions for experts. 
Changed:    Updated cat_stat_marks to support different default scalings of 
            different QA versions.             
New:        Added cat_vol_qa2 that focuses on data preparation and evaluation
            to call different (older) QA versions.             
New:        Added different versions of cat_vol_qa20* to support broader 